# agentic-django

./: .gitignore  AGENTIC_DJANGO_DESIGN.md  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  index.md  quality.md  releasing.md  skills.md
skills/agentic-django-integration/: SKILL.md
skills/agentic-django-integration/references/: architecture.md  data-model.md  errors-security.md  events.md  htmx.md  operations.md  quickstart.md  registry.md
src/agentic_django/: admin.py  apps.py  conf.py  models.py  registry.py  serializers.py  services.py  sessions.py  signals.py  tasks.py  urls.py  views.py
src/agentic_django/management/commands/: agentic_django_cleanup.py  agentic_django_recover_runs.py
src/agentic_django/migrations/: 0001_initial.py
src/agentic_django/static/agentic_django/: agentic_django.css
src/agentic_django/templates/agentic_django/partials/: conversation.html  run_fragment.html
src/agentic_django/templatetags/: agentic_django_tags.py
tests/: conftest.py  settings.py  support.py  test_conf.py  test_management.py  test_models.py  test_registry.py  test_repo_legibility.py  test_serializers.py  test_services.py  test_sessions.py  test_tasks.py  test_views.py  urls.py
