[project]
name = "agentic-django"
dynamic = ["version"]
description = "Django integration for building agentic apps with the OpenAI Agents SDK"
authors = [
    {name = "B.T. Franklin", email = "brandon.franklin@gmail.com"},
]
dependencies = [
    "Django>=6.0.7",
    "django-tasks>=0.12.0",
    "openai-agents>=0.18.2",
    "pydantic>=2.13.4",
    "django-htmx>=1.27.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/btfranklin/agentic-django"
Issues = "https://github.com/btfranklin/agentic-django/issues"
Changelog = "https://github.com/btfranklin/agentic-django/releases"
Repository = "https://github.com/btfranklin/agentic-django.git"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "ruff>=0.15.21",
]

[project.optional-dependencies]
rq = [
    "django-tasks[rq]>=0.12.0",
    "redis>=8.0.1",
]
postgres = [
    "psycopg[binary]>=3.3.4",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
django_find_project = false
pythonpath = ["."]
python_files = ["test_*.py"]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
package-dir = "src"
excludes = ["tests/**"]

[tool.pdm.scripts]
test = "pytest"
lint = "ruff check src tests"
check = {composite = ["lint", "test"]}
